# rust-blog-full-stack

./: .gitignore  Cargo.toml  README-ZH.md  README.md
backend/: .env_bak  Cargo.toml  Rocket.toml
backend/Dump20220908/: rust_blog_article.sql  rust_blog_article_content.sql  rust_blog_article_statistics.sql  rust_blog_tag.sql  rust_blog_tag_relation.sql  rust_blog_user.sql
backend/src/: cors.rs  main.rs
backend/src/article/: mod.rs
backend/src/article/article_content/: mod.rs
backend/src/article/article_content/service/: access.rs
backend/src/article/article_content/sql/: access.rs  mod.rs  model.rs  modify.rs
backend/src/article/article_statistics/sql/: access.rs  mod.rs  model.rs  modify.rs
backend/src/article/http/: access.rs  enums.rs  mod.rs  modify.rs
backend/src/article/service/: base.rs  mod.rs  modify.rs
backend/src/article/sql/: access.rs  model.rs  modify.rs
backend/src/common/http/: mod.rs  upload.rs
backend/src/tag/: mod.rs
backend/src/tag/sql/: access.rs  mod.rs  model.rs  modify.rs
backend/src/tag/tag_relation/sql/: access.rs  model.rs
backend/src/user/: mod.rs
backend/src/user/http/: mod.rs
backend/src/user/sql/: access.rs  model.rs  modify.rs
backend/src/utils/: mod.rs
backend/src/utils/sql/: function.rs  mod.rs  page.rs  sql_conn.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
frontend/prototype/css/: article.css  dashboard-article-create.css  dashboard-manage.css  dashboard.css  index.css
frontend/prototype/html/: article.html  dashboard.html  dashboard_article_create.html  dashboard_article_manage.html  index.html  showdown_test.html  simplemde_test.html
frontend/src/: article.rs  css.rs  index.rs  main.rs  tests.rs
frontend/src/dashboard/: feather.rs  feather_import.js  index.rs  mod.rs  side_bar.rs
frontend/src/dashboard/article/: create.rs  create_input.rs  create_interop.rs  editor.js  editor_binding.rs  for_editor.rs  for_markdown_converter.rs  http.rs  manage.rs  mod.rs  showdown_interop.rs  simplemde.rs  simplemde_interop.rs
frontend/src/index/: article.rs  article_dispatcher.rs  article_list_item.rs  as_index.rs  footer.rs  header.rs  http.rs  mod.rs
frontend/src/utils/: input_ref.rs  mod.rs  node_ref_transfer.rs  page.rs  raw_html.rs
frontend/static/css/: article.css  dashboard-article-create.css  dashboard-article-manage.css  dashboard-main-common.css  dashboard.css  index.css
frontend/static/html/: article.html  dashboard.html  dashboard_article_create.html  dashboard_article_manage.html  index.html  showdown_test.html  simplemde_test.html
share/: Cargo.toml
share/src/: article.rs  lib.rs  tag.rs  user.rs
share/src/article/: article_base.rs  article_complete.rs  article_statistics.rs  article_status.rs  mod.rs
share/src/tag/: mod.rs
share/src/user/: mod.rs  simple_user.rs  user_base.rs
(+4 files in other folders)
