[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
share = { path = "../share" }

# web server
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# 序列化
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.82"

# orm
diesel = { version = "2.0.0-rc.1", features = ["mysql", "mysql_backend", "chrono", "r2d2"] }

# time
chrono = { version = "0.4.19", features = ["serde"]}

# env config
dotenvy = "0.15"

# 编译期字符串连接
const_format = "0.2.26"

markdown = "0.3.0"

ubyte = "0.10.3"