[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 前端服务器框架
yew = "0.19.3"

# 路由库
yew-router = "0.16.0"

# icon 库
yew-feather = "0.2.1"

# js、css 引入
yew-interop = { version = "0.3.0", features = ["script"] }

wasm-bindgen = "0.2.82"

js-sys = "0.3.59"

#stdweb = "0.4.20"

# wasm js 工具库
gloo = "0.8.0"

# css
stylist = { version = "0.10.1", features = ["yew_integration"] }

# 序列化
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.82"

