[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
share = { path = "../share" }

# 前端服务器框架
yew = "0.19.3"

# 路由库
yew-router = "0.16.0"

# icon 库
yew-feather = "0.2.1"

# js、css 引入
yew-interop = { version = "0.3.0", features = ["script"] }

yew-agent = "0.1.0"

wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"]  }

js-sys = { version = "0.3.59"}

web-sys = { version = "0.3.58", features = [
#    "HtmlCanvasElement",
    "HtmlInputElement",
#    "HtmlSelectElement",
#    "HtmlOptionsCollection",
#    "HtmlOptionElement",
#    "HtmlCollection",
#    "HtmlElement",
#    "Element",
#    "Node"
]}

#stdweb = "0.4.20"

# wasm js 工具库
gloo = "0.8.0"

# css
stylist = { version = "0.10.1", features = ["yew_integration"] }

# 序列化
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.82"

markdown = "0.3.0"

chrono = { version = "0.4.19", features = ["serde", "wasmbind", "rkyv"]}
